finally tests working

--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "build": "nuxt build",
     "dev": "nuxt dev",
     "test": "vitest run",
+    "test:watch": "vitest watch",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest run --coverage",
     "start": "nuxt start",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
