--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -4,6 +4,9 @@ FROM node:20-alpine AS base
 
 ENV NODE_ENV=development
 
+# Create app user
+RUN addgroup -g 1001 -S nodejs && adduser -S nodejs -u 1001
+
 WORKDIR /src
 
 # Build
@@ -16,5 +19,10 @@ RUN npm ci --prefer-offline --no-audit
 FROM base
 
 COPY --from=build /src/node_modules /src/node_modules
+
+# Change ownership to nodejs user
+RUN chown -R nodejs:nodejs /src
+
+USER nodejs
 
 CMD [ "npm", "run", "dev" ]
