--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,5 +1,5 @@
 services:
-  my-app:
+  my-app-dev:
     build:
       context: .
       dockerfile: ./Dockerfile.dev
@@ -9,8 +9,7 @@ services:
     volumes:
       - .:/src
       - /src/node_modules
-      - /src/.nuxt
     working_dir: /src
+    user: "${UID:-1000}:${GID:-1000}"
     environment:
       - NODE_ENV=development
-    command: npm run dev
